# pong-template

./: .clang-tidy  CMakeLists.txt  README.md
cmake/: StandardProjectSettings.cmake  StaticAnalyzers.cmake
src/: main.cpp
test/: CMakeLists.txt
test/src/: tests.cpp
